<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_processo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textNumProtocolo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Número de Controle do Processo"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeNumeroControle"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numProcesso"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Número do processo"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeNumeroProcesso"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textData"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Data/Hora"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeData"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textTipo"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Tipo"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeTipo"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textDepartamento"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Departamento"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeDepartamento"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textInstituição"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Instituição"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeInstituicao"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textRequerente"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Requerente"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeRequerente"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textObserv"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Observação"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeObservacao"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textNome"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Nome"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeNome"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <!-- TextView para receber dados -->

        <TextView
            android:id="@+id/textAtendente"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Atendente"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- TextView para receber dados -->
        <TextView
            android:id="@+id/recebeAtendente"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:text=" "
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            tools:context="br.edu.unipampa.scpapp.Controller.AndamentoActivity">


            <Button
                android:id="@+id/btAndamento"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/colorVermelhoEscuro"
                android:onClick="BTandamento"
                android:text="Andamento"
                android:textColor="@android:color/background_light" />

        </LinearLayout>


        <ImageView
            android:id="@+id/imagePrefeitura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/prefeitura" />
    </LinearLayout>

